--- a/templates/base.html
+++ b/templates/base.html
@@ -38,9 +38,9 @@
                   Logistic Regression
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/linear">Logistic Regression Example 1</a></li>
-                  <li><a class="dropdown-item" href="/linear2">Logistic Regression Example 2</a></li>
-                  <li><a class="dropdown-item" href="/linear3">Logistic Regression Example 3</a></li>
+                  <li><a class="dropdown-item" href="/logistic">Logistic Regression Example 1</a></li>
+                  <li><a class="dropdown-item" href="/logistic2">Logistic Regression Example 2</a></li>
+                  <li><a class="dropdown-item" href="/logistic3">Logistic Regression Example 3</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
