--- a/templates/logistic3.html
+++ b/templates/logistic3.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Linear regression{% endblock title %}
-{% block body %}
 
+{% block body %}
 <div class="container ">
     <br>
 <div class="bg-light rounded-3 text-center fs-4 p-2">
@@ -16,18 +16,18 @@
 <br>
 <div class="bg-light rounded-3 text-center fs-4 p-2">
     <h2 class="display-4">An Example Of Logistic regression Model</h2>
-    An example of logistic regression model using a database to find out profit of a startup based various factors like R&D spend, marketing etc.
+    An example of logistic regression model using a datbase to find out weather a patient will have a heart disease or not in 10 years using some factors
+    like age, smoking rate, BMI, etc.
     </div>
 
 <br>
 <center>
 <div class="row">
    
-<img class="w-50 col-md-6" src="\static\Screenshot (21).png"></img>
+<img class="w-50 col-md-6" src="\static\heat.png"></img>
 <div class="col-md-6 bg-light rounded-3 fs-4">Importing pandas to perform data cleaning in the datasets
-    <br>Importing logistic regression model from sklearn<br>
+    <br>Importing linear regression model from sklearn<br>
     Traintestsplit to split our data to training and testing respectively<br>
-    r2-score to check the correctness of our data fro data visualization
 </div>
 <center>
     
@@ -37,12 +37,12 @@
         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:90px;"> 
             Reading the database
         </div>
-        <img class="w-50 col-md-6" src="\static\Screenshot (22).png"></img>
+        <img class="w-50 col-md-6" src="\static\Screenshot (9).png"></img>
         <center>
             <br>
             <center>
                 <div class="row">
-                    <img class="w-50 col-md-6" src="\static\Screenshot (23).png"></img>
+                    <img class="w-50 col-md-6" src="\static\Screenshot (11).png"></img>
                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:200px;"> 
                     Heatmap to show correlation betweeen the data
                 </div>
@@ -56,13 +56,13 @@
                             <br>
                             The Y variable contains the dependent variable which has to be predicted
                         </div>
-                        <img class="w-50 col-md-6" src="\static\Screenshot (24).png"></img>
+                        <img class="w-50 col-md-6" src="\static\Screenshot (12).png"></img>
                         <center>
                             <br>
                             <br>
                     <center>
                         <div class="row">
-                            <img class="w-50 col-md-6" src="\static\Screenshot (25).png"></img>
+                            <img class="w-50 col-md-6" src="\static\Screenshot (13).png"></img>
                         <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:30px;"> 
                             Dividing the data into training and testing data  
                             <br>
@@ -76,27 +76,38 @@
                                 <div class="row">
                                     
                                 <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:10px;"> 
-                                   Code to check Accuracy score
+                                   Code to check Accuracy Score
                                 </div>
-                                <img class="w-50 col-md-6" src="\static\Screenshot (25).png"></img>
+                                <img class="w-50 col-md-6" src="\static\Screenshot (14).png"></img>
                                 
                                 <center>
                                     <br>
-                                   
+                                    <br>
+                                    <center>
+                                        <div class="row">
+                                            <img class="w-50 col-md-6" src="\static\Screenshot (15).png"></img>
+                                        <div class="col-md-6 bg-light rounded-3 fs-4 h-50" style="margin-top:5px;"> 
+                                           Code to see Classification Report
+                                        </div>
+                                        
+                                        <center>
+                                            <br>
                                             <input type="button" class="btn btn-primary" id="linearbtn" value="Click To See Accuracy score">
                             <br>
-                            <div class="row p-3" id="graphlinear">
-                                <center>
-                                <div class="col-md-6  display-4 bg-light rounded-3" style="margin-top:20px "> Acurracy Score :- {{variable}}</div>
+                            <div id="graphlinear">
+                            
+                                <div class="col-md-6 h-50 display-4 bg-light rounded-3" style="margin-top:20px"> Accuracy Score :- {{variable}}</div>
                             </div>
                             <br>
-                            <script>
-                                $("#graphlinear").hide()
-                                $("#linearbtn").click(function(){
-                                    $("#graphlinear").fadeToggle(500);
-                                })
-                            </script>
-
-
+                          
+     
+</div>
+</div>
+<script>
+    $("#graphlinear").hide()
+    $("#linearbtn").click(function(){
+        $("#graphlinear").fadeToggle(500);
+    })
+</script>
 
 {% endblock body %}
